@@ -1,5 +1,6 @@
 v0.4.4
 Fixed : high compression modes for Windows 32 bits
+new : external dictionary API extended to buffered mode
 new : windows DLL project, thanks to Christophe Chevalier
 
 v0.4.3 :
